src/libs/yuni/nany/tests/invalid/empty_file.ny
# An empty file is invalid, because it has no unit / program declaration
